prevent wrapping of button

--- a/public/css/styles.sass
+++ b/public/css/styles.sass
@@ -32,8 +32,9 @@ button
   font-size: $font-size_small
   height: 25px
   margin-top: 3px
+  padding: 0 10px
   text-shadow: #000 1px 1px 1px
-  width: 80px
+  white-space: nowrap
 button:hover
   background-position: 0 -23px
 
